plugins/kotlin/idea/tests/testData/highlighterMetaInfo/TypeAlias.kt.highlighting
// FIR_IDENTICAL
typealias <!HIGHLIGHTING("textAttributesKey='KOTLIN_TYPE_ALIAS'")!>Predicate<!><<!HIGHLIGHTING("textAttributesKey='KOTLIN_TYPE_PARAMETER'")!>T<!>> = (<!HIGHLIGHTING("textAttributesKey='KOTLIN_TYPE_PARAMETER'")!>T<!>) -> <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Boolean<!>
fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>baz<!>(<!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>p<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_TYPE_ALIAS'")!>Predicate<!><<!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Int<!>>) = <!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'"), HIGHLIGHTING("textAttributesKey='KOTLIN_VARIABLE_AS_FUNCTION'")!>p<!>(42)
